# Nasboard

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/nasboard/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: emoji.txt  emoji_en.txt  unigram_kazakh.dic
app/src/main/assets/dict/: english_dict.db  russian_dict.db
app/src/main/assets/keyboard_layouts/: arabic.json  chinese.json  cyrillic_kazakh.json  english.json  latin.json  numeric.json  russian.json
app/src/main/assets/keyboard_themes/: forest_green.json  kuma_shuzboz.json  midnight_purple.json  nba.json  ocean_blue.json  sunset_orange.json  youtube.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni/: CMakeLists.txt  marisa_kazakh_dict_jni.cpp  pinyin_decoder_jni.cpp
app/src/main/cpp/marisa/: CMakeLists.txt
app/src/main/cpp/marisa/include/marisa/: KazakhContextPredictor.h  Kazakh_User_Dict.h  marisa.h  marisa_kazakhdict.h
app/src/main/cpp/marisa/include/marisa/grimoire/io/: mapper.cc
app/src/main/cpp/marisa/src/marisa/: KazakhContextPredictor.cpp  Kazakh_User_Dict.cpp  marisa_kazakhdict.cpp
app/src/main/cpp/pinyin/: CMakeLists.txt
app/src/main/cpp/pinyin/include/: atomdictbase.h  dictbuilder.h  dictdef.h  dictlist.h  dicttrie.h  lpicache.h  matrixsearch.h  ngram.h  pinyinime.h  searchutility.h  spellingtable.h  spellingtrie.h  splparser.h
app/src/main/cpp/pinyin/src/: matrixsearch.cpp  userdict.cpp
app/src/main/java/com/example/nasboard/: JsonTheme.kt  JsonThemeManager.kt  KeyDrawer.kt  KeyTypeClassifier.kt  KeyboardKey.kt  KeyboardTheme.kt  KeyboardType.kt  ModernKeyboardLayoutManager.kt  NasInputMedhodService.kt  NasKeyboardView.kt  SharedPreferences.kt  ThemeAdapter.kt  ThemeInfo.kt  ThemeManager.kt
app/src/main/java/com/example/nasboard/ime/: imecore.kt
app/src/main/java/com/example/nasboard/ime/activity/: HomeFragment.kt  KeyboardLanguageSettingsActivity.kt  KeyboardSettingsActivity.kt  MainActivity.kt  SettingsMainFragment.kt  ThemeSettingsActivity.kt
app/src/main/java/com/example/nasboard/ime/candidate/: CandidateView.kt
app/src/main/java/com/example/nasboard/ime/conversion/: ConversionBarView.kt  ConversionManager.kt
app/src/main/java/com/example/nasboard/ime/dictionary/: EnglishDictionaryManager.kt  KazakhDictionaryManager.kt  KazakhUserDictManager.kt  PinyinDecoder.kt  RussianDictionaryManager.kt
app/src/main/java/com/example/nasboard/ime/emoji/: Emoji.kt  EmojiCategory.kt  EmojiHistoryManager.kt  EmojiManager.kt  EmojiView.kt
app/src/main/java/com/example/nasboard/ime/theme/: JsonTheme.kt  JsonThemeManager.kt  KeyboardTheme.kt  ThemeAdapter.kt  ThemeInfo.kt  ThemeManager.kt
app/src/main/java/com/example/nasboard/ui/setup/: SetupActivity.kt  SetupFragment.kt  SetupPage.kt  SetupViewModel.kt
app/src/main/res/drawable/: favorite_indicator.xml  ic_arab.xml  ic_arab_chose.xml  ic_cancel.xml  ic_conversion.xml  ic_kiri.xml  ic_kiri_chose.xml  ic_latin.xml  ic_latin_chose.xml  variant_indicator.xml
app/src/main/res/layout/: activity_keyboard_settings.xml  activity_main.xml  activity_setup.xml  category_item.xml  emoji_item.xml  fragment_home.xml  fragment_settings_main.xml  fragment_setup.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/raw/: unigram_kazakh.dic
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: method.xml
app/src/test/java/com/example/nasboard/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
